fixed images directory (not open by default)
Former-commit-id: 81dd0428d16db1cbe12edbb89fb236d4c3dba59f

--- a/public_HTTPS/sageUI-New.html
+++ b/public_HTTPS/sageUI-New.html
@@ -314,7 +314,7 @@
 		});
 		
 		wsio.on('storedFileList', function(data) {
-			document.getElementById('images-dir').checked   = true;
+			document.getElementById('images-dir').checked   = false;
 			document.getElementById('pdfs-dir').checked     = false;
 			document.getElementById('videos-dir').checked   = false;
 			document.getElementById('sessions-dir').checked = false;
