added double-click full screen for display UI
Former-commit-id: 7c3b00fe31bfc8e1e24f57b746d37e120739989d

--- a/public_HTTPS/sageUI-New.html
+++ b/public_HTTPS/sageUI-New.html
@@ -426,8 +426,11 @@
 	
 	function pointerDblClick(event) {
 		var element = event.srcElement;
-		
-		if (element.id.length > 4 && element.id.substring(0, 4) === "app_") {
+		if(element.id === "sage2UI"){
+			displayUI.pointerDblClick();
+			event.preventDefault();
+		}
+		else if (element.id.length > 4 && element.id.substring(0, 4) === "app_") {
 			loadSelectedApplication();
 			hideDialog('appLauncherDialog');
 		}
