generate 256 512 and 1024 sized icons for apps
Former-commit-id: 97ee9e7dc81a256a2ff9bcd83a4b77852f9aa78b

--- a/public_HTTPS/sageUI-New.html
+++ b/public_HTTPS/sageUI-New.html
@@ -133,7 +133,7 @@
 					var appIcon = document.createElement('img');
 					appIcon.id = "app_icon_" + data[i+j].exif.FileName;
 					appIcon.setAttribute("application", data[i+j].exif.FileName);
-					appIcon.src = data[i+j].exif.SAGE2thumbnail;
+					appIcon.src = data[i+j].exif.SAGE2thumbnail+"_256.png";
 					appIcon.width = parseInt(size * 0.8, 10);
 					appIcon.height = parseInt(size * 0.8, 10);
 					var appName = document.createElement('p');
