--- a/public_HTTPS/sageUI-New.html
+++ b/public_HTTPS/sageUI-New.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
 <meta charset="utf-8">
-<title>SAGE2 UI</title>
+<title>SAGE2 UI - Mobile</title>
 <!--<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">-->
 <script type="text/javascript">
 	// SAGE2 is available for use under the SAGE2 Software License 
@@ -349,6 +349,7 @@
 	function mouseCheck(event) {
 		if(event.path === undefined) return;
 		hasMouse = true;
+		document.title = "SAGE2 UI - Desktop";
 		console.log("Detected as desktop device");
 		document.removeEventListener('mousemove', mouseCheck, false);
 	}
