updated test for whether or not client has mouse
Former-commit-id: 92960ae7f2ee07c4028970f06180feee59757ddb

--- a/public_HTTPS/sageUI-New.html
+++ b/public_HTTPS/sageUI-New.html
@@ -347,7 +347,7 @@
 	}
 	
 	function mouseCheck(event) {
-		if(event.path === undefined) return;
+		if(event.movementX === 0 && event.movementY === 0) return;
 		hasMouse = true;
 		document.title = "SAGE2 UI - Desktop";
 		console.log("Detected as desktop device");
