clear and tile now functional
Former-commit-id: e439947dda9f951217674f639db5bff42b63a3e7

--- a/public_HTTPS/sageUI-New.html
+++ b/public_HTTPS/sageUI-New.html
@@ -448,11 +448,11 @@
 		
 		// Arrangement Button Chosen
 		else if(element.id === "clearcontent") {
-			console.log("clear all");
+			wsio.emit('clearDisplay');
 			hideDialog('arrangementDialog');
 		}
 		else if(element.id === "tilecontent") {
-			console.log("tile content");
+			wsio.emit('tileApplications');
 			hideDialog('arrangementDialog');
 		}
 		
