updated scroll icon in sage2 pointer help
Former-commit-id: 2e066a25f51a1c3c09df2e10c620cf45c7317af5

--- a/public_HTTPS/sageUI-New.html
+++ b/public_HTTPS/sageUI-New.html
@@ -785,7 +785,7 @@
 				<table>
 					<tr>
 						<td style="padding-right:4px;">
-							<label class="sageLabel">Pointer name:</label>
+							<label class="sageLabel">Pointer Name:</label>
 						</td>
 						<td>
 							<input id="sage2PointerLabel" type="text"></input>
@@ -793,7 +793,7 @@
 					</tr>
 					<tr>
 						<td style="padding-right:4px;">
-							<label class="sageLabel">Pointer color:</label>
+							<label class="sageLabel">Pointer Color:</label>
 						</td>
 						<td>
 							<input id="sage2PointerColor" type="color" value="#B4B4B4">
@@ -805,7 +805,7 @@
 				<table>
 					<tr>
 						<td style="padding-right:4px;">
-							<label class="sageLabel">Screen resolution:</label>
+							<label class="sageLabel">Resolution:</label>
 						</td>
 						<td>
 							<select id="screenShareResolution">
@@ -818,7 +818,7 @@
 					</tr>
 					<tr>
 						<td style="padding-right:4px;">
-							<label class="sageLabel">Frame quality:</label>
+							<label class="sageLabel">Frame Quality:</label>
 						</td>
 						<td>
 							<input id="screenShareQuality" type="range" name="quality" min="1" max="10" step="1" value="5">
