updated app and media browser
Former-commit-id: 34f047528cedb96b3e56b3702a394a2472f036fc

--- a/public_HTTPS/sageUI.html
+++ b/public_HTTPS/sageUI.html
@@ -445,7 +445,7 @@
 			
 			if(selectedAppEntry !== null) selectedAppEntry.style.backgroundColor = "transparent";
 			selectedAppEntry = document.getElementById('app_row_' + application);
-			selectedAppEntry.style.backgroundColor = "#B9D3FF";
+			selectedAppEntry.style.backgroundColor = "#6C6C6C";
 		}
 		
 		// File Selected
@@ -453,7 +453,7 @@
 			// highlight selection
 			if(selectedFileEntry !== null) selectedFileEntry.style.backgroundColor = "transparent";
 			selectedFileEntry = element;
-			selectedFileEntry.style.backgroundColor = "#B9D3FF";
+			selectedFileEntry.style.backgroundColor = "#6C6C6C";
 			
 			// show metadata
 			var metadata = document.getElementById('metadata');
